demux: ts: fix unset timestamp comparison

regression by 178c1a4dfe72772085c5c5974f0cb792f702f192
refs #21125